Bug 33996 - Failing (LSB) services on non-KMS systems (fails with exit code 209/STDOUT)
Summary: Failing (LSB) services on non-KMS systems (fails with exit code 209/STDOUT)
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lennart Poettering
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-07 10:26 UTC by Michael Biebl
Modified: 2011-02-18 04:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Michael Biebl 2011-02-07 10:26:20 UTC
When booting systemd on a system without KMS (e.g. in a virtualised environment) and I remove the quiet boot parameter, I get a lot of failing SysV LSB services.

If I check there status with systemctl status, it shows a return code of 209/STDOUT

I used virt-manager to create a default Debian squeeze base system.
You can find the image file including the libvirt config at
http://www.teco.edu/~biebl/systemd-qemu/

login: root
pass: root
Comment 1 Michael Biebl 2011-02-07 10:27:05 UTC
(In reply to comment #0)
> When booting systemd on a system without KMS (e.g. in a virtualised

I have to add, that I can reproduce that on physical hardware (on my laptop) if I disable KMS support.
Comment 2 Lennart Poettering 2011-02-16 15:57:47 UTC
I wonder if this is an instance of the EIO problem described here:

https://bugs.launchpad.net/ubuntu/+source/linux/+bug/554172/comments/245

If so I am tempted to say that the removal of the BKL in .38 is the fix here.b
Comment 3 Lennart Poettering 2011-02-18 04:00:21 UTC
So I discussed this now with Kay, and we came to the conclusion that we do need to retry opening a TTY on EIO, and this is what systemd git now does. It's ugly, but the kernel folks won't fix this for us properly.

Closing this bug now, since I assume this settles the issue. If the problem isn't fixed by this, please reopen.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.