util: retry opening a TTY on EIO

https://bugs.freedesktop.org/show_bug.cgi?id=33996
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/554172/comments/245